version 0.8 - dd-MMM-yyyy
 . Actions: CallFuncND doesn't leak if reused (issue #336)
 . AtlasSpriteManager: fixed blend function (part of issue #125)
 . AtlasSprite: render in subpixel by default (issue #414)
 . Director: added isPaused property (issue #375)
 . Director: fixed memory leak in FPSLabel (issue #370)
 . ParallaxNode: uses world coordinates (issue #373)
 . Particles: support for auto-remove-on-finish (issue #385)
 . Scheduler: it's possible to scale the time (issue #236)
 . Scheduler: removed unused API (issue #427)
 . Scheduler: doesn't retain the Target (issue #421)
 . Tests: ParticleTest tests 'free' and 'grouped' emitter (part of issue #241)
 . TextureMgr: supports loading images asynchronously (issue #420)

version 0.8-beta - 17-Jun-2009
 . Actions: Added BezierBy action (issue #313)
 . Actions: improved performance when running Actions (issue #301)
 . Actions: fixed Repeat skipping when duration not an integer (issue #394)
 . All: removed deprecated classes/methods (issue #326)
 . AtlasSprite: supports flipX and flipY properties (issue #343)
 . BitmapFontAtlas: new features (issue #317)
 . box2d: Integrated box2d physics engine (issue #406)
 . CocosDenshion: new sound engine in experimental (issue #407)
 . CocosNode: actions don't retain the target (issue #150)
 . CocosNode: support real openGL Z vertex (issue #355)
 . CocosNode: faster transforming of local/world coordinates (issue #263)
 . CocosNode: anchorPoint uses normalized coords (0,0) to (1,1) (issue #303)
 . Director: supports PortraitUpsideDown and Right orientation (issue #351)
 . LabelAtlas: don't render in subpixel (issue #135)
 . Menu: All MenuItems supports CocosNodeRGBA protocol (issue #347)
 . Menu: Support for BitmapFontAtlas (or any other Label) (issue #365)
 . Menu: Support for Sprite and AtlasSprite (or any other CocosNodeRGBA node) (issue #383)
 . ParallaxNode: parallax code refactored (issue #358)